SERVER-20290 Introduce migration session id